fix: key shift

--- a/style.css
+++ b/style.css
@@ -106,13 +106,27 @@
     resize: none;
 }
 
-.off, .case-hidden {
+.off,
+.case-hidden {
     display: none;
-  }
-  
-  
-  .key.active {
-    background: #476a9e;
+}
+
+.key.active {
+    background: #bd063d;
     box-shadow: inset 2px 2px 10px rgba(13, 16, 61, 0.5),
-      inset -2px 2px 10px rgba(13, 16, 61, 0.5);
-  }
+        inset -2px 2px 10px rgba(13, 16, 61, 0.5);
+}
+
+/* Подсветка клавиш физической клавиатуры */
+
+.page-lang:hover,
+.page-lang:focus {
+  background-color: #476a9e;
+}
+
+.page-lang:active {
+  box-shadow: inset 2px 2px 10px rgba(13, 16, 61, 0.5),
+              inset -2px 2px 10px rgba(13, 16, 61, 0.5),
+              2px 2px 5px rgba(13, 16, 61, .3);;
+  outline: none;
+}
